maximumPerimeterTriangle works